@@ -2,19 +2,27 @@ package com.market_impact.MarketImpact.grpc.service;
 
 import com.market_impact.MarketImpact.Services.MarketPredictionService;
 import com.market_impact.MarketImpact.dto.MarketPredictionDto;
+import com.market_impact.MarketImpact.dto.RiskMetricsDto;
 import com.market_impact.grpc.*;
-import com.market_impact.MarketImpact.grpc.util.GrpcMapper;
 import com.google.protobuf.Empty;
+import com.google.protobuf.Timestamp;
+import io.grpc.Status;
 import io.grpc.stub.StreamObserver;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.grpc.server.service.GrpcService;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.grpc.server.service.GrpcService;
 
+import java.math.BigDecimal;
+import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @GrpcService
 @RequiredArgsConstructor
@@ -22,33 +30,45 @@ import java.util.UUID;
 public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.MarketPredictionServiceImplBase {
 
     private final MarketPredictionService marketPredictionService;
-    private final GrpcMapper grpcMapper;
 
     @Override
     public void createPrediction(CreateMarketPredictionRequest request,
                                  StreamObserver<MarketPrediction> responseObserver) {
         try {
-            log.info("Creating prediction for symbol: {}", request.getSymbol());
+            // log.info("Creating prediction for symbol: {}", request.getSymbol());
 
-            MarketPredictionDto.Request dto = grpcMapper.toCreatePredictionDto(request);
+            MarketPredictionDto.Request dto = MarketPredictionDto.Request.builder()
+                    .articleId(UUID.fromString(request.getArticleId().getValue()))
+                    .symbol(request.getSymbol())
+                    .predictedChangePercent(new BigDecimal(request.getPredictedChangePercent().getValue()))
+                    .direction(request.getDirection().name())
+                    .confidence(new BigDecimal(request.getConfidence().getValue()))
+                    .impactScore(new BigDecimal(request.getImpactScore().getValue()))
+                    .modelType(request.getModelType())
+                    .predictionTimestamp(request.hasPredictionTimestamp() ?
+                            toLocalDateTime(request.getPredictionTimestamp()) : null)
+                    .build();
+
             MarketPredictionDto.Response response = marketPredictionService.createPrediction(dto);
-            MarketPrediction grpcResponse = grpcMapper.toGrpcPrediction(response);
+            MarketPrediction grpcResponse = mapToMarketPredictionResponse(response);
 
             responseObserver.onNext(grpcResponse);
             responseObserver.onCompleted();
 
-            log.info("Successfully created prediction with ID: {}", response.getId());
+            // log.info("Successfully created prediction with ID: {}", response.getId());
         } catch (Exception e) {
-            log.error("Error creating prediction: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error creating prediction: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error creating prediction: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
     @Override
-    public void getPrediction(com.market_impact.grpc.GetMarketPredictionRequest request,
+    public void getPrediction(GetMarketPredictionRequest request,
                               StreamObserver<GetMarketPredictionResponse> responseObserver) {
         try {
-            log.debug("Getting prediction by ID: {}", request.getId().getValue());
+            // log.debug("Getting prediction by ID: {}", request.getId().getValue());
 
             UUID predictionId = UUID.fromString(request.getId().getValue());
             Optional<MarketPredictionDto.Response> prediction =
@@ -56,16 +76,20 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
 
             if (prediction.isPresent()) {
                 GetMarketPredictionResponse response = GetMarketPredictionResponse.newBuilder()
-                        .setPrediction(grpcMapper.toGrpcPrediction(prediction.get()))
+                        .setPrediction(mapToMarketPredictionResponse(prediction.get()))
                         .build();
                 responseObserver.onNext(response);
+                responseObserver.onCompleted();
             } else {
-                responseObserver.onError(new RuntimeException("Prediction not found"));
+                responseObserver.onError(Status.NOT_FOUND
+                        .withDescription("Prediction not found")
+                        .asRuntimeException());
             }
-            responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting prediction: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting prediction: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting prediction: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -73,21 +97,52 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void updatePrediction(UpdateMarketPredictionRequest request,
                                  StreamObserver<MarketPrediction> responseObserver) {
         try {
-            log.info("Updating prediction with ID: {}", request.getId().getValue());
+            // log.info("Updating prediction with ID: {}", request.getId().getValue());
 
             UUID predictionId = UUID.fromString(request.getId().getValue());
-            MarketPredictionDto.Request dto = grpcMapper.toUpdatePredictionDto(request);
+
+            MarketPredictionDto.Request.RequestBuilder builder =
+                    MarketPredictionDto.Request.builder();
+
+            if (request.hasArticleId()) {
+                builder.articleId(UUID.fromString(request.getArticleId().getValue()));
+            }
+            if (!request.getSymbol().isEmpty()) {
+                builder.symbol(request.getSymbol());
+            }
+            if (request.hasPredictedChangePercent()) {
+                builder.predictedChangePercent(new BigDecimal(request.getPredictedChangePercent().getValue()));
+            }
+            if (request.getDirection() != Direction.DIRECTION_UNSPECIFIED) {
+                builder.direction(request.getDirection().name());
+            }
+            if (request.hasConfidence()) {
+                builder.confidence(new BigDecimal(request.getConfidence().getValue()));
+            }
+            if (request.hasImpactScore()) {
+                builder.impactScore(new BigDecimal(request.getImpactScore().getValue()));
+            }
+            if (!request.getModelType().isEmpty()) {
+                builder.modelType(request.getModelType());
+            }
+            if (request.hasPredictionTimestamp()) {
+                builder.predictionTimestamp(toLocalDateTime(request.getPredictionTimestamp()));
+            }
+
+            MarketPredictionDto.Request dto = builder.build();
             MarketPredictionDto.Response response =
                     marketPredictionService.updatePrediction(predictionId, dto);
-            MarketPrediction grpcResponse = grpcMapper.toGrpcPrediction(response);
+            MarketPrediction grpcResponse = mapToMarketPredictionResponse(response);
 
             responseObserver.onNext(grpcResponse);
             responseObserver.onCompleted();
 
-            log.info("Successfully updated prediction with ID: {}", predictionId);
+            // log.info("Successfully updated prediction with ID: {}", predictionId);
         } catch (Exception e) {
-            log.error("Error updating prediction: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error updating prediction: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error updating prediction: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -95,7 +150,7 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void deletePrediction(DeleteMarketPredictionRequest request,
                                  StreamObserver<Empty> responseObserver) {
         try {
-            log.info("Deleting prediction with ID: {}", request.getId().getValue());
+            // log.info("Deleting prediction with ID: {}", request.getId().getValue());
 
             UUID predictionId = UUID.fromString(request.getId().getValue());
             marketPredictionService.deletePrediction(predictionId);
@@ -103,10 +158,12 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(Empty.getDefaultInstance());
             responseObserver.onCompleted();
 
-            log.info("Successfully deleted prediction with ID: {}", predictionId);
+            // log.info("Successfully deleted prediction with ID: {}", predictionId);
         } catch (Exception e) {
-            log.error("Error deleting prediction: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error deleting prediction: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error deleting prediction: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -114,20 +171,20 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getPredictionsBySymbol(GetPredictionsBySymbolRequest request,
                                        StreamObserver<GetPredictionsBySymbolResponse> responseObserver) {
         try {
-            log.debug("Getting predictions for symbol: {}", request.getSymbol());
+            // log.debug("Getting predictions for symbol: {}", request.getSymbol());
 
             if (request.hasPageRequest()) {
                 // Handle paginated request
-                PageRequest pageRequest = grpcMapper.toPageRequest(request.getPageRequest());
+                PageRequest pageRequest = createPageRequest(request.getPageRequest());
                 Page<MarketPredictionDto.Response> pagedPredictions =
                         marketPredictionService.getPredictionsBySymbolPaged(request.getSymbol(), pageRequest);
 
                 List<MarketPrediction> grpcPredictions = pagedPredictions.getContent()
                         .stream()
-                        .map(grpcMapper::toGrpcPrediction)
-                        .toList();
+                        .map(this::mapToMarketPredictionResponse)
+                        .collect(Collectors.toList());
 
-                PageResponse pageResponse = grpcMapper.toGrpcPageResponse(pagedPredictions);
+                com.market_impact.grpc.PageResponse pageResponse = createPageResponse(pagedPredictions);
 
                 GetPredictionsBySymbolResponse response = GetPredictionsBySymbolResponse.newBuilder()
                         .addAllPredictions(grpcPredictions)
@@ -141,8 +198,8 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
                         marketPredictionService.getPredictionsBySymbol(request.getSymbol());
 
                 List<MarketPrediction> grpcPredictions = predictions.stream()
-                        .map(grpcMapper::toGrpcPrediction)
-                        .toList();
+                        .map(this::mapToMarketPredictionResponse)
+                        .collect(Collectors.toList());
 
                 GetPredictionsBySymbolResponse response = GetPredictionsBySymbolResponse.newBuilder()
                         .addAllPredictions(grpcPredictions)
@@ -153,8 +210,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
 
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting predictions by symbol: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting predictions by symbol: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting predictions by symbol: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -162,14 +221,14 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getPredictionsSummary(GetPredictionsSummaryRequest request,
                                       StreamObserver<GetPredictionsSummaryResponse> responseObserver) {
         try {
-            log.debug("Getting predictions summary for symbol: {}", request.getSymbol());
+            // log.debug("Getting predictions summary for symbol: {}", request.getSymbol());
 
             List<MarketPredictionDto.Summary> summaries =
                     marketPredictionService.getPredictionsSummaryBySymbol(request.getSymbol());
 
             List<MarketPredictionSummary> grpcSummaries = summaries.stream()
-                    .map(grpcMapper::toGrpcPredictionSummary)
-                    .toList();
+                    .map(this::mapToMarketPredictionSummaryResponse)
+                    .collect(Collectors.toList());
 
             GetPredictionsSummaryResponse response = GetPredictionsSummaryResponse.newBuilder()
                     .addAllSummaries(grpcSummaries)
@@ -178,8 +237,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(response);
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting predictions summary: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting predictions summary: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting predictions summary: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -187,14 +248,14 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getRecentPredictions(GetRecentPredictionsRequest request,
                                      StreamObserver<GetRecentPredictionsResponse> responseObserver) {
         try {
-            log.debug("Getting recent predictions for {} hours", request.getHours());
+            // log.debug("Getting recent predictions for {} hours", request.getHours());
 
             List<MarketPredictionDto.Response> predictions =
                     marketPredictionService.getRecentPredictions(request.getHours());
 
             List<MarketPrediction> grpcPredictions = predictions.stream()
-                    .map(grpcMapper::toGrpcPrediction)
-                    .toList();
+                    .map(this::mapToMarketPredictionResponse)
+                    .collect(Collectors.toList());
 
             GetRecentPredictionsResponse response = GetRecentPredictionsResponse.newBuilder()
                     .addAllPredictions(grpcPredictions)
@@ -203,8 +264,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(response);
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting recent predictions: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting recent predictions: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting recent predictions: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -213,14 +276,14 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
                                              StreamObserver<GetHighConfidencePredictionsResponse> responseObserver) {
         try {
             double minConfidence = Double.parseDouble(request.getMinConfidence().getValue());
-            log.debug("Getting high confidence predictions with min confidence: {}", minConfidence);
+            // log.debug("Getting high confidence predictions with min confidence: {}", minConfidence);
 
             List<MarketPredictionDto.Response> predictions =
                     marketPredictionService.getHighConfidencePredictions(minConfidence);
 
             List<MarketPrediction> grpcPredictions = predictions.stream()
-                    .map(grpcMapper::toGrpcPrediction)
-                    .toList();
+                    .map(this::mapToMarketPredictionResponse)
+                    .collect(Collectors.toList());
 
             GetHighConfidencePredictionsResponse response = GetHighConfidencePredictionsResponse.newBuilder()
                     .addAllPredictions(grpcPredictions)
@@ -229,8 +292,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(response);
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting high confidence predictions: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting high confidence predictions: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting high confidence predictions: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -238,17 +303,17 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getPredictionsByTimeRange(GetPredictionsByTimeRangeRequest request,
                                           StreamObserver<GetPredictionsByTimeRangeResponse> responseObserver) {
         try {
-            log.debug("Getting predictions by time range for symbol: {}", request.getSymbol());
+            // log.debug("Getting predictions by time range for symbol: {}", request.getSymbol());
 
-            java.time.LocalDateTime startTime = grpcMapper.toLocalDateTime(request.getTimeRange().getStartTime());
-            java.time.LocalDateTime endTime = grpcMapper.toLocalDateTime(request.getTimeRange().getEndTime());
+            LocalDateTime startTime = toLocalDateTime(request.getTimeRange().getStartTime());
+            LocalDateTime endTime = toLocalDateTime(request.getTimeRange().getEndTime());
 
             List<MarketPredictionDto.Response> predictions =
                     marketPredictionService.getPredictionsByTimeRange(request.getSymbol(), startTime, endTime);
 
             List<MarketPrediction> grpcPredictions = predictions.stream()
-                    .map(grpcMapper::toGrpcPrediction)
-                    .toList();
+                    .map(this::mapToMarketPredictionResponse)
+                    .collect(Collectors.toList());
 
             GetPredictionsByTimeRangeResponse response = GetPredictionsByTimeRangeResponse.newBuilder()
                     .addAllPredictions(grpcPredictions)
@@ -257,8 +322,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(response);
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting predictions by time range: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting predictions by time range: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting predictions by time range: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -266,7 +333,7 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getAvailableSymbols(GetAvailableSymbolsRequest request,
                                     StreamObserver<GetAvailableSymbolsResponse> responseObserver) {
         try {
-            log.debug("Getting available symbols");
+            // log.debug("Getting available symbols");
 
             List<String> symbols = marketPredictionService.getAvailableSymbols();
 
@@ -277,8 +344,10 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
             responseObserver.onNext(response);
             responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting available symbols: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting available symbols: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting available symbols: " + e.getMessage())
+                    .asRuntimeException());
         }
     }
 
@@ -286,23 +355,155 @@ public class MarketPredictionGrpcService extends MarketPredictionServiceGrpc.Mar
     public void getLatestPrediction(GetLatestPredictionRequest request,
                                     StreamObserver<GetLatestPredictionResponse> responseObserver) {
         try {
-            log.debug("Getting latest prediction for symbol: {}", request.getSymbol());
+            // log.debug("Getting latest prediction for symbol: {}", request.getSymbol());
 
             Optional<MarketPredictionDto.Response> prediction =
                     marketPredictionService.getLatestPredictionForSymbol(request.getSymbol());
 
             if (prediction.isPresent()) {
                 GetLatestPredictionResponse response = GetLatestPredictionResponse.newBuilder()
-                        .setPrediction(grpcMapper.toGrpcPrediction(prediction.get()))
+                        .setPrediction(mapToMarketPredictionResponse(prediction.get()))
                         .build();
                 responseObserver.onNext(response);
+                responseObserver.onCompleted();
             } else {
-                responseObserver.onError(new RuntimeException("No prediction found for symbol: " + request.getSymbol()));
+                responseObserver.onError(Status.NOT_FOUND
+                        .withDescription("No prediction found for symbol: " + request.getSymbol())
+                        .asRuntimeException());
             }
-            responseObserver.onCompleted();
         } catch (Exception e) {
-            log.error("Error getting latest prediction: {}", e.getMessage(), e);
-            responseObserver.onError(e);
+            // log.error("Error getting latest prediction: {}", e.getMessage(), e);
+            responseObserver.onError(Status.INTERNAL
+                    .withDescription("Error getting latest prediction: " + e.getMessage())
+                    .asRuntimeException());
         }
+    }
+
+    // Private helper methods for mapping
+
+    private MarketPrediction mapToMarketPredictionResponse(MarketPredictionDto.Response dto) {
+        MarketPrediction.Builder builder = MarketPrediction.newBuilder()
+                .setId(createGrpcUUID(dto.getId()))
+                .setArticleId(createGrpcUUID(dto.getArticleId()))
+                .setSymbol(dto.getSymbol())
+                .setPredictedChangePercent(createGrpcDecimal(dto.getPredictedChangePercent()))
+                .setDirection(Direction.valueOf(dto.getDirection()))
+                .setConfidence(createGrpcDecimal(dto.getConfidence()))
+                .setImpactScore(createGrpcDecimal(dto.getImpactScore()))
+                .setModelType(dto.getModelType());
+
+        if (dto.getPredictionTimestamp() != null) {
+            builder.setPredictionTimestamp(toGrpcTimestamp(dto.getPredictionTimestamp()));
+        }
+        if (dto.getCreatedAt() != null) {
+            builder.setCreatedAt(toGrpcTimestamp(dto.getCreatedAt()));
+        }
+        if (dto.getUpdatedAt() != null) {
+            builder.setUpdatedAt(toGrpcTimestamp(dto.getUpdatedAt()));
+        }
+        if (dto.getRiskMetrics() != null) {
+            List<RiskMetrics> grpcRiskMetrics = dto.getRiskMetrics().stream()
+                    .map(this::mapToRiskMetricsResponse)
+                    .collect(Collectors.toList());
+            builder.addAllRiskMetrics(grpcRiskMetrics);
+        }
+
+        return builder.build();
+    }
+
+    private MarketPredictionSummary mapToMarketPredictionSummaryResponse(MarketPredictionDto.Summary dto) {
+        MarketPredictionSummary.Builder builder = MarketPredictionSummary.newBuilder()
+                .setId(createGrpcUUID(dto.getId()))
+                .setSymbol(dto.getSymbol())
+                .setPredictedChangePercent(createGrpcDecimal(dto.getPredictedChangePercent()))
+                .setDirection(Direction.valueOf(dto.getDirection()))
+                .setConfidence(createGrpcDecimal(dto.getConfidence()))
+                .setModelType(dto.getModelType());
+
+        if (dto.getPredictionTimestamp() != null) {
+            builder.setPredictionTimestamp(toGrpcTimestamp(dto.getPredictionTimestamp()));
+        }
+
+        return builder.build();
+    }
+
+    private RiskMetrics mapToRiskMetricsResponse(RiskMetricsDto.Response dto) {
+        RiskMetrics.Builder builder = RiskMetrics.newBuilder()
+                .setId(createGrpcUUID(dto.getId()))
+                .setPredictionId(createGrpcUUID(dto.getPredictionId()))
+                .setSymbol(dto.getSymbol())
+                .setVar951Day(createGrpcDecimal(dto.getVar951day()))  // Fixed: setVar951Day (capital D)
+                .setHistoricalVolatility30D(createGrpcDecimal(dto.getHistoricalVolatility30d()))  // Fixed: setHistoricalVolatility30D (capital D)
+                .setMarketCorrelation(createGrpcDecimal(dto.getMarketCorrelation()))
+                .setRiskLevel(RiskLevel.valueOf(dto.getRiskLevel()));
+
+        if (dto.getCreatedAt() != null) {
+            builder.setCreatedAt(toGrpcTimestamp(dto.getCreatedAt()));
+        }
+        if (dto.getUpdatedAt() != null) {
+            builder.setUpdatedAt(toGrpcTimestamp(dto.getUpdatedAt()));
+        }
+
+        return builder.build();
+    }
+
+    // Common conversion helper methods
+
+    private com.market_impact.grpc.UUID createGrpcUUID(UUID uuid) {
+        return com.market_impact.grpc.UUID.newBuilder()
+                .setValue(uuid.toString())
+                .build();
+    }
+
+    private Decimal createGrpcDecimal(BigDecimal decimal) {
+        return Decimal.newBuilder()
+                .setValue(decimal.toString())
+                .build();
+    }
+
+    private LocalDateTime toLocalDateTime(Timestamp timestamp) {
+        return LocalDateTime.ofInstant(
+                Instant.ofEpochSecond(timestamp.getSeconds(), timestamp.getNanos()),
+                ZoneOffset.UTC
+        );
+    }
+
+    private Timestamp toGrpcTimestamp(LocalDateTime dateTime) {
+        if (dateTime == null) return null;
+        Instant instant = dateTime.toInstant(ZoneOffset.UTC);
+        return Timestamp.newBuilder()
+                .setSeconds(instant.getEpochSecond())
+                .setNanos(instant.getNano())
+                .build();
+    }
+
+    private PageRequest createPageRequest(com.market_impact.grpc.PageRequest grpcPageRequest) {
+        int page = grpcPageRequest.getPage();
+        int size = grpcPageRequest.getSize();
+        String sortStr = grpcPageRequest.getSort();
+
+        if (sortStr.isEmpty()) {
+            return PageRequest.of(page, size);
+        }
+
+        // Parse sort string (e.g., "predictionTimestamp,desc")
+        String[] sortParts = sortStr.split(",");
+        String property = sortParts[0];
+        Sort.Direction direction = sortParts.length > 1 && "desc".equalsIgnoreCase(sortParts[1])
+                ? Sort.Direction.DESC : Sort.Direction.ASC;
+
+        Sort sort = Sort.by(direction, property);
+        return PageRequest.of(page, size, sort);
+    }
+
+    private com.market_impact.grpc.PageResponse createPageResponse(Page<?> page) {
+        return com.market_impact.grpc.PageResponse.newBuilder()
+                .setPage(page.getNumber())
+                .setSize(page.getSize())
+                .setTotalPages(page.getTotalPages())
+                .setTotalElements(page.getTotalElements())
+                .setFirst(page.isFirst())
+                .setLast(page.isLast())
+                .build();
     }
 }
